[tool.poetry]
name = "DeepQLearning"
version = "0.1.0"
description = ""
authors = ["Gleidson Leite <gledson.leytte@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.4.1"
Box2D = "^2.3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "20.8b1"
gym = "^0.18.0"

[tool.poetry.scripts]
start-app = "deepqlearning.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
